# Simple-AVS-Generator

./: .appveyor.yml  .gitignore  .hgignore  CMakeLists.txt  README.md  Simple AVS Generator.Designer.cs  Simple AVS Generator.cs  Simple AVS Generator.csproj  Simple AVS Generator.sln  appveyor.yml  azure-pipelines.yml  build.cmd
Core/: AudioSupport.cs  AviSynthScript.cs  Common.cs  InputFileHandler.cs  OutputScripts.cs  SupportedAudioLanguages.cs  SupportedExts.cs
Modules/: AviSynthScript.cs  Common.cs  Enums.cs  FileHandler.cs  InputFileHandler.cs  OutputScripts.cs  SupportedExts.cs
Properties/: AssemblyInfo.cs
Simple AVS Generator/: MainForm.cs  Program.cs  Simple AVS Generator.cs  Simple AVS Generator.csproj
Simple AVS Generator.Core/: AviSynthScript.cs  Common.cs  Enums.cs  InputFileHandler.cs  OutputScripts.cs  Simple AVS Generator.Core.csproj
Simple AVS Generator.Core.Tests/: AviSynthScriptTests.cs  CommonTests.cs  Simple AVS Generator.Core.Tests.csproj
Simple AVS Generator.Core.Tests/Support/: ExtensionsTests.cs
Simple AVS Generator.Core/Support/: Audio.cs  Extensions.cs  Video.cs
Simple AVS Generator/Core/: AviSynthScript.cs  Common.cs  Enums.cs  InputFileHandler.cs
Simple AVS Generator/Core/Support/: Audio.cs  Extensions.cs  Video.cs
Simple AVS Generator/Properties/: Settings.Designer.cs  Settings.settings
SimpleAVSGenerator/: MainForm.Designer.cs  MainForm.cs  Program.cs  SimpleAVSGenerator.csproj
SimpleAVSGenerator.Core/: AviSynthScript.cs  Common.cs  Enums.cs  InputFileHandler.cs  OutputScripts.cs  SimpleAVSGenerator.Core.csproj
SimpleAVSGenerator.Core.Tests/: AviSynthScriptTests.cs  CommonTests.cs  InputFileHandlerTests.cs  OutputScriptsTests.cs  SimpleAVSGenerator.Core.Tests.csproj
SimpleAVSGenerator.Core.Tests/Support/: ExtensionsTests.cs
SimpleAVSGenerator.Core/Support/: Audio.cs  Extensions.cs  Video.cs
SimpleAVSGenerator/Properties/: Settings.Designer.cs  Settings.settings
SimpleAVSGeneratorCore/: AviSynthScript.cs  Common.cs  InputFile.cs  InputFileHandler.cs  OutputScripts.cs  SimpleAVSGeneratorCore.csproj
SimpleAVSGeneratorCore.Tests/: AviSynthScriptTests.cs  CommonTests.cs  InputFileHandlerTests.cs  InputFileTests.cs  OutputScriptsTests.cs  SimpleAVSGeneratorCore.Tests.csproj
SimpleAVSGeneratorCore.Tests/Samples/: Sample DTS_X.mkv  Sample.265  Sample.m4a  Sample1.mkv
SimpleAVSGeneratorCore.Tests/Support/: AudioTests.cs  ExtensionsTests.cs  VideoTests.cs
SimpleAVSGeneratorCore/Models/: AudioModel.cs  FileModel.cs  SupportedExtension.cs  VideoModel.cs
SimpleAVSGeneratorCore/Support/: Audio.cs  Extensions.cs  Video.cs
cmake/: SimpleAVSGenerator.AssemblyInfo.cs.in  SimpleAVSGenerator.WinForms.AssemblyInfo.cs.in  SimpleAVSGeneratorCore.AssemblyInfo.cs.in  dotnet-publish.cmd.in  installer.iss.in
docs/releases/: v2.1.0.md
scripts/: build.cmd  create-installer.cmd
source/: AssemblyInfo.cs.in  CMakeLists.txt  Program.cs  Simple AVS Generator.Designer.cs  Simple AVS Generator.cs  app.config
source/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs  Settings.settings
src/: Simple AVS Generator.sln  SimpleAVSGenerator.sln
src/Frontends/SimpleAVSGenerator.WinForms/: GlobalUsings.cs  MainForm.Designer.cs  MainForm.cs  Program.DependencyInjection.cs  Program.cs  SimpleAVSGenerator.WinForms.csproj
src/Libraries/SimpleAVSGeneratorCore/: DependencyInjection.cs  InputFile.cs  SimpleAVSGeneratorCore.csproj
src/Libraries/SimpleAVSGeneratorCore.Tests/: .gitignore  AviSynthScriptTests.cs  DependencyInjectionTests.cs  InputFileTests.cs  OutputScriptsTests.cs  SimpleAVSGeneratorCore.Tests.csproj
src/Libraries/SimpleAVSGeneratorCore.Tests/Fixtures/: CommonDependencyInjectionCollectionFixture.cs  CommonDependencyInjectionFixture.cs
src/Libraries/SimpleAVSGeneratorCore.Tests/Services/: AviSynthScriptTests.cs  OutputScriptsTests.cs
src/Libraries/SimpleAVSGeneratorCore.Tests/Support/: AudioTests.cs  ExtensionsTests.cs  VideoTests.cs
src/Libraries/SimpleAVSGeneratorCore/Constants/: FileExtensionTypes.cs  SupportedOutputAudioCodecs.cs
src/Libraries/SimpleAVSGeneratorCore/Models/: AudioInfo.cs  FileModel.cs  InputFile.cs  InputFileInfo.cs  SupportedOutputAudio.cs  VideoInfo.cs  VideoModel.cs
src/Libraries/SimpleAVSGeneratorCore/Services/: AviSynthScriptService.cs  IInputFileHandlerService.cs  InputFileHandlerService.cs  OutputScriptsService.cs
src/Libraries/SimpleAVSGeneratorCore/Support/: Audio.cs  Extensions.cs  Video.cs
src/SimpleAVSGenerator/: .gitignore  MainForm.Designer.cs  MainForm.cs  Program.DependencyInjection.cs  Program.cs  SimpleAVSGenerator.csproj  appsettings.json
src/SimpleAVSGenerator/Properties/: Settings.Designer.cs
src/SimpleAVSGeneratorCore/: AviSynthScript.cs  InputFile.cs  OutputScripts.cs  SimpleAVSGeneratorCore.csproj
src/SimpleAVSGeneratorCore.Tests/: AviSynthScriptTests.cs  InputFileTests.cs  OutputScriptsTests.cs  SimpleAVSGeneratorCore.Tests.csproj
src/SimpleAVSGeneratorCore.Tests/Fixtures/: CommonDependencyInjectionFixture.cs
src/SimpleAVSGeneratorCore.Tests/Support/: AudioTests.cs  ExtensionsTests.cs  VideoTests.cs
src/SimpleAVSGeneratorCore/Models/: AudioModel.cs  SupportedOutputAudio.cs
src/SimpleAVSGeneratorCore/Services/: AviSynthScriptService.cs  FileWriterService.cs  IFileWriterService.cs  IInputFileHandlerService.cs  InputFileHandlerService.cs  OutputScriptsService.cs
src/SimpleAVSGeneratorCore/Support/: Extensions.cs  Video.cs
